# lightyear-portfolio-ai-analyst

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: analyst.yml
src/analysis/: analyst.py  prompts.py
src/database/: supabase_client.py
src/ingestion/: lightyear.py  market.py
src/reporting/: email.py  report.py  storage.py
tests/: test_analyst.py  test_lightyear_parser.py  test_market.py  test_report.py  test_supabase_client.py  test_supabase_integration.py
